yamls/k8s-webhook/k8s-webhook-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-webhook-deploy
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: k8s-webhook
  template:
    metadata:
      labels:
        app: k8s-webhook
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
     #- image: octahub.8lab.cn:5000/99/k8s-webhook:v20220424
      - image: octahub.8lab.cn:5000/99/k8s-webhook:v20230525
        imagePullPolicy: Always
        args:
      # - -l :8080
        - -svc-conflict
        name: k8s-webhook
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /certs
          name: k8s-webhook-secret
          readOnly: true
      serviceAccountName: k8s-webhook-sa
      volumes:
      - name: k8s-webhook-secret
        secret:
          defaultMode: 420
          secretName: k8s-webhook-secret
