yamls/k8s-webhook/k8s-webhook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-webhook-svc
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: k8s-webhook
  type: ClusterIP
 #externalIPs:
 #- 192.168.1.98
