yamls/k8s-webhook/k8s-webhook-validating.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: k8s-webhook-validating
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR0RENDQXB5Z0F3SUJBZ0lVSHU2aUVvWVkvYjhVa3ZiTDlqZWNxZHlpY2ZFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1lERVZNQk1HQTFVRUJ4TU1kR2hsSUdsdWRHVnlibVYwTVJZd0ZBWURWUVFLRXcxaGRYUnZaMlZ1WlhKaApkR1ZrTVJVd0V3WURWUVFMRXd3NGJHRmlJR05zZFhOMFpYSXhHREFXQmdOVkJBTVREemhzWVdJZ1lYVjBiMmRsCmJpQkRRVEFlRncweU1qQTJNekF4TVRJNU1EQmFGdzB5TnpBMk1qa3hNVEk1TURCYU1HQXhGVEFUQmdOVkJBY1QKREhSb1pTQnBiblJsY201bGRERVdNQlFHQTFVRUNoTU5ZWFYwYjJkbGJtVnlZWFJsWkRFVk1CTUdBMVVFQ3hNTQpPR3hoWWlCamJIVn [...]
   #url or service
   #url: https://192.168.1.98:9003/services
    service:
      name: k8s-webhook-svc 
      namespace: default
      path: /validate-service-conflict
     #path: /services
      port: 8080
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: service.address.conflict
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - services
    scope: '*'
  sideEffects: None
  timeoutSeconds: 5
